added name property. made payload more generic for use with other machinery.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,14 @@
         android:textSize="18sp" />
 
     <EditText
+        android:id="@+id/monitor_name_edittext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Monitor Name (e.g., dryer-1)"
+        android:inputType="text"
+        android:maxLines="1" />
+
+    <EditText
         android:id="@+id/threshold_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
